[package]
name = "blockchain-app"
description = "a basic upsetter name service for testing purposes"
version = "0.1.0"
authors = ["subnetter <subnetter@pm.me>"]
edition = "2018"

[dependencies.tokio]
version = "1.8.1"
features = ["full"]

[dependencies]
base = { path = "../base" }
db = { path = "../db" }
common = { path = "../common"}
blockchain = { path = "../blockchain" }

xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

async-trait = "0.1.41"
futures = "0.3.5"

log = "*"
env_logger = "*"
getopts = "*"
anyhow = "1.0"
clap = "2.33.3"

