[package]
name = "blockchain"
description = "A stand-alone mock net service implementing Layer1Service and Layer2Service for clients and providers"
version = "0.1.0"
authors = ["subnetter <subnetter@pm.me>"]
edition = "2018"

[dependencies.tokio]
version = "1.8.1"
features = ["full"]

[dependencies]

base = { path = "../base" }
db = { path = "../db" }
crypto = { path = "../crypto"}
common = { path = "../common" }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

tonic = { version = "=0.5.0", features = ["default", "compression"] }
tonic-web = "0.1"
tonic-health = "0.4"

rocksdb = "0.16.0"
prost = "0.8"

bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"

log = "*"
env_logger = "*"
anyhow = "1"
arrayref = "0.3.6"
byteorder = "*"

datetime = "*"
sha2 = "0.9.1"
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }
async-trait = "0.1.41"
futures = "0.3.5"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]


[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]
