[package]
name = "common"
description = "services and components used by both clients and servers"
version = "0.1.0"
authors = ["subnetter <subnetter@pm.me>"]
edition = "2018"

[dependencies]
base = { path = "../base" }
db = { path = "../db" }
crypto = { path = "../crypto"}
double-ratchet = { path = "../double-ratchet" }

serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11.5"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"

tonic = "0.3"
prost = "0.8.0"
log = "*"
env_logger = "*"
anyhow = "1"
arrayref = "0.3.6"
byteorder = "*"
datetime = "*"
sha2 = "0.9.1"
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }
async-trait = "0.1.41"
futures = "0.3.5"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.tokio]
version = "1.8.1"
features = ["full"]

[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]