[package]
name = "cryptomail"
version = "0.1.0"
authors = ["subnetter <subnetter@pm.me>"]
edition = "2018"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
prost-serde = "0.2.0"
prost-derive = "0.8"
tonic-build = { version = "=0.5.1", features = ["transport", "rustfmt", "prost", "compression"] }
ethers = "0.2.2"


[dependencies.tokio]
version = "1.8.1"
features = ["full"]

[dependencies]
tonic = { version = "=0.5.0", features = ["default", "compression"] }
tonic-web = "0.1"
tonic-health = "0.4"

prost = "0.8"
prost-types = "0.8"

base = { path = "../base" }
db = { path = "../db" }
common = { path = "../common"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

bytes = { version = "1", features = ["serde"] }
crypto = { path = "../crypto"}
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

ethers = "0.2.2"

reqwest = { version = "0.11", features = ["json"] }
rocksdb = "0.16.0"
prost-helper = "0.5.0"
anyhow = "1.0"
byteorder = "*"
datetime = "*"
chrono = "*"
getrandom ="0.2.3"

async-trait = "0.1.41"
futures = "0.3.5"
hex = "0.3.2"

custom_error = "1.8.0"
log = "0.4.8"
env_logger = "*"
config = "*"
orion = "0"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.fnv]
version = "1.0"

[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]
